# minimal-actix-sqlx-musl

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md
src/: assets.rs  main.rs
static/: index.html
