[package]
name = "musl_demo"
version = "0.1.0"
authors = ["DaanA32 <daan32@gmail.com>"]
edition = "2018"
description = "Demo musl"
license = "MIT or APACHE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
actix = "0.10.0"
actix-web = "3.2.0"
actix-files = "0.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.1"
sqlx = { version = "0.4.0-beta.1", features = [ "mysql" ] }
